# xorf

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
analysis/: Cargo.toml  README.md  plot_zeroes  plot_zeroes.py
analysis/src/: zeroes.rs
benches/: bfuse16.rs  bfuse32.rs  bfuse8.rs  fuse16.rs  fuse32.rs  fuse8.rs  xor16.rs  xor32.rs  xor8.rs
scripts/: check
src/: bfuse16.rs  bfuse32.rs  bfuse8.rs  fuse16.rs  fuse32.rs  fuse8.rs  hash_proxy.rs  lib.rs  murmur3.rs  prelude.rs  splitmix64.rs  xor16.rs  xor32.rs  xor8.rs
src/prelude/: bfuse.rs  fuse.rs  mod.rs  xor.rs
