[package]
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
categories = ["algorithms", "data-structures", "no-std", "caching"]
description = """
Library implementing xor filters - faster and smaller than bloom and cuckoo filters.
"""
documentation = "https://docs.rs/xorf"
edition = "2018"
homepage = "https://github.com/ayazhafiz/xorf"
keywords = ["xor", "filter", "hash", "hashing"]
license = "MIT"
name = "xorf"
readme = "README.md"
repository = "https://github.com/ayazhafiz/xorf"
version = "0.3.0"

[badges.is-it-maintained-issue-resolution]
repository = "ayazhafiz/xorf"

[badges.is-it-maintained-open-issues]
repository = "ayazhafiz/xorf"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "ayazhafiz/xorf"

[dependencies]
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.7.2"
