[package]
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
categories = ["algorithms", "data-structures", "no-std", "caching"]
description = """
Library implementing xor filters - faster and smaller than bloom and cuckoo filters.
"""
documentation = "https://docs.rs/xorf"
edition = "2018"
homepage = "https://github.com/ayazhafiz/xorf"
keywords = ["xor", "filter", "hash", "hashing"]
license = "MIT"
name = "xorf"
readme = "README.md"
repository = "https://github.com/ayazhafiz/xorf"
version = "0.8.1"

[badges.is-it-maintained-issue-resolution]
repository = "ayazhafiz/xorf"

[badges.is-it-maintained-open-issues]
repository = "ayazhafiz/xorf"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "ayazhafiz/xorf"

[dependencies]
libm = { version = "0.2.1", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }
bincode = { version = "2.0.0-rc", default-features = false, optional = true, features = ["derive"]} 
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.3.0"
criterion-macro = "0.3.0"
rand = "0.8"

[[bench]]
name = "bfuse32"
harness = false

[[bench]]
name = "bfuse16"
harness = false

[[bench]]
name = "bfuse8"
harness = false

[[bench]]
name = "fuse32"
harness = false

[[bench]]
name = "fuse16"
harness = false

[[bench]]
name = "fuse8"
harness = false

[[bench]]
name = "xor32"
harness = false

[[bench]]
name = "xor16"
harness = false

[[bench]]
name = "xor8"
harness = false

[features]
default = ["uniform-random", "binary-fuse"]
uniform-random = ["rand"]
binary-fuse = ["libm"]
