[package]
authors = ["ayazhafiz <ayaz.hafiz.1@gmail.com>"]
categories = ["algorithms", "data-structures", "no-std", "caching"]
description = """
Library implementing xor filters - faster and smaller than bloom and cuckoo filters.
"""
documentation = "https://docs.rs/xorf"
edition = "2021"
homepage = "https://github.com/ayazhafiz/xorf"
keywords = ["xor", "filter", "hash", "hashing"]
license = "MIT"
name = "xorf"
readme = "README.md"
repository = "https://github.com/ayazhafiz/xorf"
version = "0.12.0"

[badges.is-it-maintained-issue-resolution]
repository = "ayazhafiz/xorf"

[badges.is-it-maintained-open-issues]
repository = "ayazhafiz/xorf"

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "ayazhafiz/xorf"

[dependencies]
libm = { version = "0.2.1", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11.12", optional = true }
bincode = { version = "2.0.0-rc.3", default-features = false, optional = true, features = ["std", "derive"]} 
num-traits = { version = "0.2.12", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "0.3.0"
criterion-macro = "0.3.0"
rand = "0.9"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "derive", "serde"]}

[[bench]]
name = "bfuse32"
harness = false

[[bench]]
name = "bfuse16"
harness = false

[[bench]]
name = "bfuse8"
harness = false
required-features = ["serde"]

[[bench]]
name = "fuse32"
harness = false

[[bench]]
name = "fuse16"
harness = false

[[bench]]
name = "fuse8"
harness = false

[[bench]]
name = "xor32"
harness = false

[[bench]]
name = "xor16"
harness = false

[[bench]]
name = "xor8"
harness = false

[features]
default = ["uniform-random", "binary-fuse"]
uniform-random = ["rand"]
binary-fuse = ["libm"]
serde = ["dep:serde", "serde_bytes"]
